crates/jarl/tests/integration/snapshots/integration__assignment_op__assignment_wrong_value_from_toml-2.snap
---
source: crates/jarl/tests/integration/assignment_op.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name().normalize_temp_paths()"
---
success: false
exit_code: 255
----- stdout -----

----- stderr -----
jarl failed
  Cause: Failed to parse [TEMP_DIR]/jarl.toml:
TOML parse error at line 3, column 14
  |
3 | assignment = 1
  |              ^
invalid type: integer `1`, expected a string


----- args -----
check .
